platform/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: app
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
